Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* rename support for env var CONFIG_ROOT to PORTAGE_CONFIGROOT; seems
  that changed in portage at some point.  This should fully restore
  crossdev support.


pkgcore 0.5.10: February 7th, 2010

* ticket 235; CBUILD/CTARGET values were being stomped w/ CHOST.

* EAPI=3 support; pkgcore already preserved mtimes at the second level,
  remaining bits were added for full EAPI3 support.

  Pkgcore doesn't currently fully PREFIX offset merges, but that will be
  added in the next release or two most likely.

* EBUILD_PHASE was set to setup-binpkg for pkg_setup phase w/ binpkgs-
  ebuilds expected setup however, thus EBUILD_PHASE is now set to setup
  always for pkg_setup phase.

* fixup env filtering- backslash escaping wasn't needed in the patterns
  resulting in failed matches.  Mostly protective cleanup.

* tweak cache backend to not stamp cache entries where mtime is no longer
  external w/ an mtime of '-1'.  Didn't hurt anything but was a pointless op.

* fix the cpy incremental_expansion implementation; not sure how it slipped
  in being slower then native python, but the cpy version is now 60% faster
  than the native equivalent.
  Additionally, this extension is now disabled under py2.4 since it makes
  heavy use of PySet apis.

* ticket 234; handle refs properly in dhcpformat/mke2fsformat.

* pkgcore atom objects blocks_temp_ignorable data is now stored in
  blocks_strongly; the old attr is aliased, although will be removed.

* pkgcore now supports revisions of arbitrary length (previously was <31 bits).


pkgcore 0.5.9: January 8th, 2010

* this release of pkgcore requires snakeoil >=0.3.6

* expand repository api slightly adding has_match; this is intended
  as a simple boolean check if a repo has it.  It should *only* be
  used for containment- if you need the results don't test then itermatch,
  just itermatch.
